# autoblogs

./: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml
.streamlit/: config.toml
autoblogs/: __init__.py  api.py  prompts.py
autoblogs/cli/: main.py
autoblogs/client/: __init__.py  _base.py  anthropic.py  base.py  claude.py  openai.py
autoblogs/config/: __init__.py  constants.py  default.py
autoblogs/error/: __init__.py  error.py
autoblogs/manager/: client.py  content.py
autoblogs/model/: dataflows.py  manager.py
autoblogs/models/: dataflows.py
autoblogs/prompts/: __init__.py  blogs.txt
autoblogs/static/: ascii.rebel.txt
autoblogs/ui/: app.py
autoblogs/ui/assets/css/: style.css
autoblogs/ui/assets/templates/prompts/: blogs.txt
autoblogs/ui/components/: footer.html  render.py
autoblogs/ui/pages/: about.py  create.py  dashboard.py  review.py  settings.py
autoblogs/utils/: decorator.py
