[build-system]
requires = [
    "setuptools==82.0.1",
    "wheel==0.46.3"
]
build-backend = "setuptools.build_meta"

[project]
name = "autoblogs"
dynamic = ["version"]
description = "Advanced Project Tracker and Manager Application"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
license = {file = "LICENSE" }

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License"
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.setuptools.dynamic]
version = {attr = "autoblogs.__version__"}

[project.scripts]
autoblogs-ui = "autoblogs.ui.main:launch"
